# osome-csdl-ranking-challenge

./: .gitignore  Dockerfile  Dockerfile.app  Dockerfile.ranker  Makefile  README.md  ad_and_profile_profile.csv  ar_and_profile_profile.csv  config.ini.sample  docker-compose.dev.yml  docker-compose.yml  env_dante.mk  env_linux.mk  environment.yml  har_and_profile_profile.csv  pyproject.toml  test.env
app/: Dockerfile  config.ini  ranker_profile.py  ranker_profile_test.py  ranking_save_only.py  ranking_server.py  ranking_server_profile.py  ranking_server_saumya_test.py  ranking_server_test.py  ranking_server_verbose.py  sample_data.py  test.ipynb
app/ranking_server/: ranking.py  ranking_server.py  ranking_test.py  utils.py
app/sandbox_worker/: worker_test.py
app/scorer_worker/: scorer_advanced.py  scorer_basic.py  scorer_test.py  scorer_test_fake_request.py  tasks.py
celery/: tasks.py
dante/: config.ini.sample  logging_config.yaml  utils.py
dante/app/ranking_server/: README.md  ranking_server.py  ranking_server_extension.py  ranking_server_test.py
dante/app/scorer_worker/: README.md  celery_app.py  conftest.py  scorer_basic.py  scorer_test.py  scorer_test_fake_request.py  tasks.py
dante/osomerank/: __init__.py  audience_diversity.py  audience_diversity_BERTopic.py  audience_diversity_BERTopic_Rockwell.py  config.ini  elicited_response.py  topic_diversity.py  utils.py
dante/osomerank/sample_posts/: sample_post_facebook.json
data/: analyze.ipynb
data/extension_dowon/: twitter_raw__2024-06-07T14:54:47.090Z.json  twitter_raw__2024-06-07T14:56:37.076Z.json  twitter_raw__2024-06-07T14:56:55.041Z.json  twitter_raw__2024-06-07T14:58:26.879Z.json
data/test_data/: twitter_raw__2024-06-14T15:26:28.072Z.json
debug/: test_ad.py  test_td.py
debug/data/: facebook_request_long.json  facebook_request_short.json  reddit_request_long.json  reddit_request_short.json  twitter_request_long.json  twitter_request_short.json
docker/: Dockerfile.ranker  Dockerfile.ranking_profile  Dockerfile.ranking_server  Dockerfile.retrain_worker  Dockerfile.scorer_worker
extension_data/: facebook_ranked__2024-05-25T20:07:33.276Z.json  facebook_raw__2024-05-25T20:07:33.276Z.json  twitter_ranked__2024-05-24T16:14:22.763Z.json  twitter_raw__2024-05-24T16:14:22.763Z.json
first_submission/: ranking_save_only.py  ranking_server.py  ranking_server_test.py
first_submission/app/: ranking_server.py
libs/: setup.py
libs/osomerank/: Dockerfile_worker  __init__.py  audience_diversity.py  audience_diversity_BERTopic.py  audience_diversity_BERTopic_Rockwell.py  audience_diversity_clustering_text.py  audience_diversity_clustering_text_SBERT.py  audience_diversity_old.py  config.ini  elicited_response.py  negative_affect.py  topic_diversity.py  unshorten_URLs.py  unshorten_URLs_redis.py  utils.py
libs/osomerank/models/: clustering_centroids.csv  topics.json  (+2 more)
libs/worker_retraining/: Dockerfile  audience_diversity_BERTopic_Rockwell.py  config_worker.ini
module/src/: setup.py
pro-social-ranking/: pyvenv.cfg
rc-extension/: Facebook Comment Scrape.ipynb  README-integration.md  config.ini  extension.js  facebook.js  installed.html  manifest.json  options.html  popup.html  reddit.js  service_worker.js  twitter.js
rc-extension-update/: service_worker.js
rc-extension-update/scripts/: autoscroll_fb.py  autoscroll_twitter.py  autoscroll_twitter_autologin.py
rc-extension/data/: facebook_content.json  facebook_raw__2024-06-03T04:41:53.700Z.json  facebook_unranked__2024-05-24T16:29:46.757Z.json  twitter_unranked__2024-05-24T16:27:45.100Z.json
rc-extension/scripts/: autoscroll.py  autoscroll_t.py
rc-extension/styles/: common.scss  tailwind-styles.css
sample_data/: data_pull.py
scripts/: audience_diversity_BERTopic.py  audience_diversity_BERTopic_Rockwell.py  config.ini  get_toxicity_score.py  run_ranker_profile.sh  run_ranker_profile_test.sh
src/: setup.py
src/osomerank/: audience_diversity_BERTopic_Rockwell.py
tests/: docker-compose.dev.yml  docker-compose.icebear.yml  latency.py
tests/latency_test/: latency_testing.py
verification/latency_test/: latency_testing.py
(+13 files in other folders)
