[tool.poetry]
name = "osome-csdl-ranking-challenge"
version = "0.1.0"
description = "Testing ranking algorithms to improve social cohesion."
authors = ["Giovanni Luca Ciampaglia <glciampagl@gmail.com>; Bao T. Truong <baotruon@iu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "osomerank", from = "libs" }, {include = "ranking_server", from = "app"}]
include = [
    { path = "libs/osomerank/data/*.csv", format = ["sdist", "wheel"] }, 
    { path = "libs/osomerank/models/AD_rockwell/*.*", format = ["sdist", "wheel"] },
    { path = "libs/osomerank/models/ER/*/*.*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"
Cython = "*"
hdbscan = "^0.8.37"
bertopic = "^0.16.2"
sentence-transformers = "^3.0.1"
torch = "^2.3.1"
requests = "^2.32.3"
boto3 = "^1.34.130"
aiohttp = "^3.9.5"
celery = "^5.4.0"
gunicorn = "^22.0.0"
gevent = "*"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
celery-redbeat = "^2.2.0"
redis = "^5.0.6"
ranking-challenge = "^2.1.6"
pydantic = "^2.7.4"
faker = "^25.9.1"
uvicorn = "^0.30.1"
uvicorn-worker = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
