[tool.poetry]
name = "dante"
version = "0.1.0"
description = "Testing ranking algorithms to improve social cohesion."
authors = ["Giovanni Luca Ciampaglia <glciampagl@gmail.com>; Bao T. Truong <baotruon@iu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dante"}]

[tool.poetry.dependencies]
python = "^3.12"
aiodns = "^3.2.0"
aiohttp = "^3.9.5"
bertopic = "^0.16.2"
boto3 = "^1.34.130"
brotli = "^1.1.0"
celery = "^5.4.0"
celery-redbeat = "^2.2.0"
Cython = "*"
faker = "^25.9.1"
fastapi = "^0.111.0"
hdbscan = "^0.8.37"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.4"
ranking-challenge = "^2.1.6"
redis = "^5.0.6"
requests = "^2.32.3"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"
sentence-transformers = "^3.0.1"
sqlalchemy = "^2.0.31"
torch = "^2.3.1"
unshorten-fast = {git = "https://github.com/glciampaglia/unshorten-fast.git"}
uvicorn = "^0.30.1"
platformdirs = "^4.2.2"
fakeredis = "^2.23.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
requests = "^2.32.3"
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
